Fix contrast issue for links

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -23,11 +23,11 @@
 
 a {
   font-weight: 500;
-  color: #ff5722;
+  color: #8b2303;
   text-decoration: inherit;
 }
 a:hover {
-  color: #8b2303;
+  color: #621902;
 }
 
 body {
